--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <source srcset="
                                 ./images/mob/team_1.jpg    1x,
                                 ./images/mob/team_1@2x.jpg 2x" type="image/webp" media="(min-width: 480px)" />
-                            <img src="./images/img1.jpg" alt="команда" width="270" />
+                            <img src="./images/mob/team_1.jpg" alt="команда" width="450" height="460" />
                         </picture>
                         <div class="team__wrapper">
                             <h3 class="team__title">Игорь Демьяненко</h3>
@@ -257,7 +257,7 @@
                             <source srcset="
                                 ./images/mob/team_2.jpg    1x,
                                 ./images/mob/team_2@2x.jpg 2x" type="image/webp" media="(min-width: 480px)" />
-                            <img src="./images/img2.jpg" alt="команда" width="270" />
+                            <img src="./images/mob/team_2.jpg" alt="команда" width="450" height="460" />
                         </picture>
                         <div class="team__wrapper">
                             <h3 class="team__title">Ольга Репина</h3>
@@ -314,7 +314,7 @@
                             <source srcset="
                                 ./images/mob/team_3.jpg    1x,
                                 ./images/mob/team_3@2x.jpg 2x" type="image/webp" media="(min-width: 480px)" />
-                            <img src="./images/img3.jpg" alt="команда" width="270" />
+                            <img src="./images/mob/team_3.jpg" alt="команда" width="450" height="460" />
                         </picture>
                         <div class="team__wrapper">
                             <h3 class="team__title">Николай Тарасов</h3>
@@ -371,7 +371,7 @@
                             <source srcset="
                                 ./images/mob/team_4.jpg    1x,
                                 ./images/mob/team_4@2x.jpg 2x" type="image/webp" media="(min-width: 480px)" />
-                            <img src="./images/img4.jpg" alt="команда" width="270" />
+                            <img src="./images/mob/team_4.jpg" alt="команда" width="450" height="460" />
                         </picture>
                         <div class="team__wrapper">
                             <h3 class="team__title">Михаил Ермаков</h3>
